clusters/home-lab-kubernetes-01/manifests/namespaces/istio-system/virtualservice/podinfo-home-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo-home-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "podinfo.home.zufardhiyaulhaq.com"
  gateways:
  - istio-system/podinfo-home-zufardhiyaulhaq-com-gateway
  http:
  - name: "podinfo-home-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 9898
          host: podinfo.default.svc.cluster.local
  exportTo:
    - "."
